Examples/fail/wrong_arity_main.stella
language core;

fn main(n : Nat, m : Nat ) -> {Nat, Nat} {
   return {n, m}
} 
